[gd_scene load_steps=6 format=3 uid="uid://cvx8k3m0n5p6r"]

[ext_resource type="Script" path="res://Scripts/VFX/ObstacleCollisionVFX.gd" id="1_collision_vfx"]

[sub_resource type="Gradient" id="gradient_sparks"]
colors = PackedColorArray(1, 0.5, 0, 1, 1, 0.2, 0, 1, 0.5, 0, 0, 0.5)

[sub_resource type="Gradient" id="gradient_smoke"]
colors = PackedColorArray(0.2, 0.2, 0.2, 0.8, 0.1, 0.1, 0.1, 0.4, 0.05, 0.05, 0.05, 0)

[sub_resource type="ParticleProcessMaterial" id="spark_material"]
direction = Vector3(0, 1, 0)
spread = 90.0
initial_velocity_min = 3.0
initial_velocity_max = 8.0
gravity = Vector3(0, -15, 0)
scale_min = 0.05
scale_max = 0.15
color = Color(1, 0.5, 0, 1)
color_ramp = SubResource("gradient_sparks")

[sub_resource type="ParticleProcessMaterial" id="smoke_material"]
direction = Vector3(0, 1, 0)
spread = 60.0
initial_velocity_min = 1.0
initial_velocity_max = 3.0
gravity = Vector3(0, -2, 0)
scale_min = 0.2
scale_max = 0.5
color = Color(0.2, 0.2, 0.2, 0.8)
color_ramp = SubResource("gradient_smoke")

[node name="ObstacleCollisionVFX" type="Node3D"]
script = ExtResource("1_collision_vfx")

[node name="ImpactSparks" type="GPUParticles3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.2, 0)
amount = 25
lifetime = 1.2
preprocess = 0.0
emission_shape = 3
emission_box_extents = Vector3(0.8, 0.8, 0.8)
process_material = SubResource("spark_material")

[node name="ImpactSmoke" type="GPUParticles3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.2, 0)
amount = 15
lifetime = 2.0
preprocess = 0.0
emission_shape = 3
emission_box_extents = Vector3(0.6, 0.6, 0.6)
process_material = SubResource("smoke_material")

[node name="BurstImpact" type="GPUParticles3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.2, 0)
amount = 10
lifetime = 0.5
preprocess = 0.0
explosiveness = 1.0
emission_shape = 3
emission_box_extents = Vector3(0.4, 0.4, 0.4)
process_material = SubResource("spark_material")

[node name="ImpactLight" type="OmniLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.2, 0)
light_color = Color(1, 0.3, 0, 1)
light_energy = 3.0
light_specular = 0.5
omni_range = 4.0
omni_attenuation = 2.0

[node name="AudioStreamPlayer3D" type="AudioStreamPlayer3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.2, 0)
max_distance = 15.0
attenuation_model = 2

[node name="DamageFlash" type="ColorRect" parent="."]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 0, 0, 0)
